Fix to remove scrollbar at the bottom of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body {
     flex-direction: column;
     background-color: rgb(206, 206, 212);
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 main {
